force-app/main/default/objects/Certified_Sites__c/Certified_Sites__c.object-meta.xml
<CustomObject>
    <label>Certified Site</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Certified Sites Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certified Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>