force-app/main/default/objects/Certified_Sites__c/fields/Account_FSC__c.field-meta.xml
<CustomField>
    <fullName>Account_FSC__c</fullName>
    <description>FSC</description>
    <label>Account FSC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>