force-app/main/default/objects/Certified_Sites__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>