force-app/main/default/objects/Certified_Sites__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>CustomerSite__r.ShippingStreet +&quot; &quot;+CustomerSite__r.ShippingCity+&quot;, &quot;+CustomerSite__r.ShippingState +&quot; &quot;+CustomerSite__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>