force-app/main/default/objects/Certified_Sites__c/fields/Annual_FFB_Production__c.field-meta.xml
<CustomField>
    <fullName>Annual_FFB_Production__c</fullName>
    <label>Annual FFB Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>