force-app/main/default/objects/Certified_Sites__c/fields/Carry_Over_Volume__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Volume__c</fullName>
    <label>Carry Over Volume</label>
    <length>10</length>
    <type>Text</type>
</CustomField>