force-app/main/default/objects/Certified_Sites__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate</label>
    <referenceTo>Certificate__c</referenceTo>
    <relationshipLabel>Certified Sites</relationshipLabel>
    <relationshipName>Certified_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>