force-app/main/default/objects/Certified_Sites__c/fields/Certified_Area__c.field-meta.xml
<CustomField>
    <fullName>Certified_Area__c</fullName>
    <label>Certified Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>