force-app/main/default/objects/Certified_Sites__c/fields/Certified_Production_Area__c.field-meta.xml
<CustomField>
    <fullName>Certified_Production_Area__c</fullName>
    <label>Certified Production Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>