force-app/main/default/objects/Certified_Sites__c/fields/City_Site__c.field-meta.xml
<CustomField>
    <fullName>City_Site__c</fullName>
    <label>City(Site)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>