force-app/main/default/objects/Certified_Sites__c/fields/Crop_Product__c.field-meta.xml
<CustomField>
    <fullName>Crop_Product__c</fullName>
    <label>Crop/Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>