force-app/main/default/objects/Certified_Sites__c/fields/CSPK_Projected_Tonnage_Total_module__c.field-meta.xml
<CustomField>
    <fullName>CSPK_Projected_Tonnage_Total_module__c</fullName>
    <description>No use, This field moved from OC to Certified Site</description>
    <label>CSPK Projected Tonnage Total (module)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>