force-app/main/default/objects/Certified_Sites__c/fields/Customer_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Address__c</fullName>
    <formula>CustomerSite__r.ShippingStreet</formula>
    <label>Customer Site Address</label>
    <type>Text</type>
</CustomField>