force-app/main/default/objects/Certified_Sites__c/fields/Customer_Site_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_City__c</fullName>
    <formula>CustomerSite__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Site City</label>
    <type>Text</type>
</CustomField>