force-app/main/default/objects/Certified_Sites__c/fields/Customer_Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Country__c</fullName>
    <formula>CustomerSite__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Site Country</label>
    <type>Text</type>
</CustomField>