force-app/main/default/objects/Certified_Sites__c/fields/Customer_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Name__c</fullName>
    <formula>CustomerSite__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Site Name</label>
    <type>Text</type>
</CustomField>