force-app/main/default/objects/Certified_Sites__c/fields/Customer_Site_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Postal_Code__c</fullName>
    <formula>CustomerSite__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Site Postal Code</label>
    <type>Text</type>
</CustomField>