force-app/main/default/objects/Certified_Sites__c/fields/DMS_Address__c.field-meta.xml
<CustomField>
    <fullName>DMS_Address__c</fullName>
    <label>DMS Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>