force-app/main/default/objects/Certified_Sites__c/fields/DMS_amt_1__c.field-meta.xml
<CustomField>
    <fullName>DMS_amt_1__c</fullName>
    <label>DMS amt 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>