force-app/main/default/objects/Certified_Sites__c/fields/DMS_CAVId__c.field-meta.xml
<CustomField>
    <fullName>DMS_CAVId__c</fullName>
    <label>DMS CAVId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>