force-app/main/default/objects/Certified_Sites__c/fields/DMS_Cert_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Cert_Id__c</fullName>
    <label>DMS Cert Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>