force-app/main/default/objects/Certified_Sites__c/fields/DMS_Certified_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>DMS_Certified_Site_Name__c</fullName>
    <label>DMS Certified Site Name</label>
    <type>TextArea</type>
</CustomField>