force-app/main/default/objects/Certified_Sites__c/fields/DMS_description_2__c.field-meta.xml
<CustomField>
    <fullName>DMS_description_2__c</fullName>
    <label>DMS description 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>