force-app/main/default/objects/Certified_Sites__c/fields/DMS_description__c.field-meta.xml
<CustomField>
    <fullName>DMS_description__c</fullName>
    <label>DMS description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>