force-app/main/default/objects/Certified_Sites__c/fields/DMS_qty_1__c.field-meta.xml
<CustomField>
    <fullName>DMS_qty_1__c</fullName>
    <label>DMS qty 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>