force-app/main/default/objects/Certified_Sites__c/fields/DMS_qty_2__c.field-meta.xml
<CustomField>
    <fullName>DMS_qty_2__c</fullName>
    <label>DMS qty 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>