force-app/main/default/objects/Certified_Sites__c/fields/DMS_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Site_Id__c</fullName>
    <label>DMS Site id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>