force-app/main/default/objects/Certified_Sites__c/fields/DMS_type_2__c.field-meta.xml
<CustomField>
    <fullName>DMS_type_2__c</fullName>
    <label>DMS type 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>