force-app/main/default/objects/Certified_Sites__c/fields/DMS_type_3__c.field-meta.xml
<CustomField>
    <fullName>DMS_type_3__c</fullName>
    <label>DMS type 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>