force-app/main/default/objects/Certified_Sites__c/fields/DMS_type__c.field-meta.xml
<CustomField>
    <fullName>DMS_type__c</fullName>
    <label>DMS type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>