force-app/main/default/objects/Certified_Sites__c/fields/Estates_FFB_Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Estates_FFB_Projected_Tonnage__c</fullName>
    <description>No use, This field moved from OC to Certified Site</description>
    <label>Estates FFB Projected Tonnage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>