force-app/main/default/objects/Certified_Sites__c/fields/Farm_Address__c.field-meta.xml
<CustomField>
    <fullName>Farm_Address__c</fullName>
    <label>Farm Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>