force-app/main/default/objects/Certified_Sites__c/fields/Farm_Name__c.field-meta.xml
<CustomField>
    <fullName>Farm_Name__c</fullName>
    <label>Farm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>