force-app/main/default/objects/Certified_Sites__c/fields/FFB_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>FFB_Tonnage__c</fullName>
    <description>No use, This field moved from OC to Certified Site</description>
    <label>FFB Tonnage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>