force-app/main/default/objects/Certified_Sites__c/fields/Fishermen__c.field-meta.xml
<CustomField>
    <fullName>Fishermen__c</fullName>
    <label>Fishermen</label>
    <length>10</length>
    <type>Text</type>
</CustomField>