force-app/main/default/objects/Certified_Sites__c/fields/Fishing_Assoc__c.field-meta.xml
<CustomField>
    <fullName>Fishing_Assoc__c</fullName>
    <label>Fishing Assoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>