force-app/main/default/objects/Certified_Sites__c/fields/Gear_Types__c.field-meta.xml
<CustomField>
    <fullName>Gear_Types__c</fullName>
    <label>Gear Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>