force-app/main/default/objects/Certified_Sites__c/fields/Geographical_Site__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Site__c</fullName>
    <label>Geographical Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>