force-app/main/default/objects/Certified_Sites__c/fields/Handling__c.field-meta.xml
<CustomField>
    <fullName>Handling__c</fullName>
    <inlineHelpText>0 No
1 Field
2 Fac.
3 Both</inlineHelpText>
    <label>Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>