force-app/main/default/objects/Certified_Sites__c/fields/Harvest_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Harvest_End_Date__c</fullName>
    <label>Harvest End Date</label>
    <type>Date</type>
</CustomField>