force-app/main/default/objects/Certified_Sites__c/fields/Harvest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Start_Date__c</fullName>
    <label>Harvest Start Date</label>
    <type>Date</type>
</CustomField>