force-app/main/default/objects/Certified_Sites__c/fields/Landing_Site__c.field-meta.xml
<CustomField>
    <fullName>Landing_Site__c</fullName>
    <label>Landing Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>