force-app/main/default/objects/Certified_Sites__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>CustomerSite__r.Latitude__c</formula>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>