force-app/main/default/objects/Certified_Sites__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>FSC</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COC - Group Manager - Legal Entity</fullName>
            </value>
            <value>
                <fullName>COC - Group Member - Legal Entity</fullName>
            </value>
            <value>
                <fullName>COC - Multisite Manager - Legal Entity</fullName>
            </value>
            <value>
                <fullName>COC - Single Certificate - Legal Entity</fullName>
            </value>
            <value>
                <fullName>COC - Site</fullName>
            </value>
            <value>
                <fullName>COC - Site - Legal Entity</fullName>
            </value>
            <value>
                <fullName>COC - Subsite</fullName>
            </value>
            <value>
                <fullName>FM - Group Manager</fullName>
            </value>
            <value>
                <fullName>FM - Group Member</fullName>
            </value>
            <value>
                <fullName>FM - Single Certificate</fullName>
            </value>
            <value>
                <fullName>Project Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>