force-app/main/default/objects/Certified_Sites__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>CustomerSite__r.Longitude__c</formula>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>