force-app/main/default/objects/Certified_Sites__c/fields/MS__c.field-meta.xml
<CustomField>
    <fullName>MS__c</fullName>
    <label>MS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>