force-app/main/default/objects/Certified_Sites__c/fields/OpportunityCertificate__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCertificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Certificate</label>
    <referenceTo>Opportunity_Certificate__c</referenceTo>
    <relationshipLabel>Certified Sites</relationshipLabel>
    <relationshipName>Certified_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>