force-app/main/default/objects/Certified_Sites__c/fields/Print_on_certificate__c.field-meta.xml
<CustomField>
    <fullName>Print_on_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print on certificate</label>
    <type>Checkbox</type>
</CustomField>