force-app/main/default/objects/Certified_Sites__c/fields/Processing_Site__c.field-meta.xml
<CustomField>
    <fullName>Processing_Site__c</fullName>
    <label>Processing Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>