force-app/main/default/objects/Certified_Sites__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <label>Producer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>