force-app/main/default/objects/Certified_Sites__c/fields/Product_Form__c.field-meta.xml
<CustomField>
    <fullName>Product_Form__c</fullName>
    <label>Product Form</label>
    <length>50</length>
    <type>Text</type>
</CustomField>