force-app/main/default/objects/Certified_Sites__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <formula>CustomerSite__r.ShippingStreet + &apos; &apos; + CustomerSite__r.ShippingCity + &apos;, &apos; + CustomerSite__r.ShippingState + &apos; &apos; +  CustomerSite__r.ShippingPostalCode + &apos; &apos; + CustomerSite__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>