force-app/main/default/objects/Certified_Sites__c/fields/Site_Code_Extension__c.field-meta.xml
<CustomField>
    <fullName>Site_Code_Extension__c</fullName>
    <description>FSC</description>
    <label>Site Code Extension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>