force-app/main/default/objects/Certified_Sites__c/fields/Site_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Name_Code__c</fullName>
    <description>To Store site Code eg - CQU-003
Used in Certificate for fair trade USA</description>
    <label>Site Name (Code)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>