force-app/main/default/objects/Certified_Sites__c/fields/SiteType__c.field-meta.xml
<CustomField>
    <fullName>SiteType__c</fullName>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bonsucro Site</fullName>
            </value>
            <value>
                <fullName>Estates</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Farm Site</fullName>
            </value>
            <value>
                <fullName>First Collector</fullName>
            </value>
            <value>
                <fullName>First Collector &amp; Trader</fullName>
            </value>
            <value>
                <fullName>Industrial Operator</fullName>
            </value>
            <value>
                <fullName>Main Office</fullName>
            </value>
            <value>
                <fullName>Mechanical Operator</fullName>
            </value>
            <value>
                <fullName>Palm Oil Mill and Supply Base</fullName>
            </value>
            <value>
                <fullName>Point of Origin</fullName>
            </value>
            <value>
                <fullName>Processing Unit</fullName>
            </value>
            <value>
                <fullName>Sales Entity</fullName>
            </value>
            <value>
                <fullName>Scheme Smallholders /Outgrowers</fullName>
            </value>
            <value>
                <fullName>Storage Unit</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Trader with Storage</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Additional Sites</fullName>
                <isActive>false</isActive>
                <label>Additional Sites</label>
            </value>
            <value>
                <fullName>Group/Multisite Members</fullName>
                <isActive>false</isActive>
                <label>Group/Multisite Members</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>