force-app/main/default/objects/Certified_Sites__c/fields/Subproducts__c.field-meta.xml
<CustomField>
    <fullName>Subproducts__c</fullName>
    <label>Subproducts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>