force-app/main/default/objects/Certified_Sites__c/fields/Sugarcane_Area__c.field-meta.xml
<CustomField>
    <fullName>Sugarcane_Area__c</fullName>
    <label>Sugarcane Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>