force-app/main/default/objects/Certified_Sites__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <label>Total Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>