force-app/main/default/objects/Certified_Sites__c/fields/Traceability_Level__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Level__c</fullName>
    <label>Traceability Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>