force-app/main/default/objects/Certified_Sites__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing Site</fullName>
            </value>
            <value>
                <fullName>Production Site</fullName>
            </value>
            <value>
                <fullName>Fishing Association</fullName>
            </value>
            <value>
                <fullName>Landing Site</fullName>
            </value>
            <value>
                <fullName>Farm Site</fullName>
            </value>
            <value>
                <fullName>Bonsucro Site</fullName>
            </value>
            <value>
                <fullName>Fisheries</fullName>
                <isActive>false</isActive>
                <label>Fisheries</label>
            </value>
            <value>
                <fullName>Greenhouse Site</fullName>
                <isActive>false</isActive>
                <label>Greenhouse Site</label>
            </value>
            <value>
                <fullName>Office Site</fullName>
                <isActive>false</isActive>
                <label>Office Site</label>
            </value>
            <value>
                <fullName>Processing/Packaging Site</fullName>
                <isActive>false</isActive>
                <label>Processing/Packaging Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>