force-app/main/default/objects/Certified_Sites__c/fields/Varieties__c.field-meta.xml
<CustomField>
    <fullName>Varieties__c</fullName>
    <label>Varieties</label>
    <length>50</length>
    <type>Text</type>
</CustomField>