force-app/main/default/objects/Certified_Sites__c/fields/Vessels__c.field-meta.xml
<CustomField>
    <fullName>Vessels__c</fullName>
    <label>Vessels</label>
    <length>10</length>
    <type>Text</type>
</CustomField>