force-app/main/default/objects/Certified_Sites__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <length>10</length>
    <type>Text</type>
</CustomField>